--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
 	{
 		"key": "dbln",
-		"value": "%7B%2261565769827240%22%3A%22swBM8t7D%22%7D",
+		"value": "%7B%2261565769827240%22%3A%22YbBMEgr3%22%7D",
 		"domain": "facebook.com",
 		"path": "/login/device-based/",
 		"hostOnly": false,
-		"creation": "2024-09-26T13:02:20.609Z",
-		"lastAccessed": "2024-09-26T13:02:20.610Z"
+		"creation": "2024-09-26T14:06:43.338Z",
+		"lastAccessed": "2024-09-26T14:06:43.338Z"
 	},
 	{
 		"key": "datr",
@@ -14,8 +14,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2024-09-26T13:02:20.610Z",
-		"lastAccessed": "2024-09-26T13:02:20.610Z"
+		"creation": "2024-09-26T14:06:43.338Z",
+		"lastAccessed": "2024-09-26T14:06:43.338Z"
 	},
 	{
 		"key": "sb",
@@ -23,8 +23,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2024-09-26T13:02:20.610Z",
-		"lastAccessed": "2024-09-26T13:02:20.610Z"
+		"creation": "2024-09-26T14:06:43.339Z",
+		"lastAccessed": "2024-09-26T14:06:43.339Z"
 	},
 	{
 		"key": "locale",
@@ -32,8 +32,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2024-09-26T13:02:20.610Z",
-		"lastAccessed": "2024-09-26T13:02:20.610Z"
+		"creation": "2024-09-26T14:06:43.339Z",
+		"lastAccessed": "2024-09-26T14:06:43.339Z"
 	},
 	{
 		"key": "vpd",
@@ -41,8 +41,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2024-09-26T13:02:20.610Z",
-		"lastAccessed": "2024-09-26T13:02:20.610Z"
+		"creation": "2024-09-26T14:06:43.339Z",
+		"lastAccessed": "2024-09-26T14:06:43.339Z"
 	},
 	{
 		"key": "ps_l",
@@ -50,8 +50,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2024-09-26T13:02:20.610Z",
-		"lastAccessed": "2024-09-26T13:02:20.610Z"
+		"creation": "2024-09-26T14:06:43.339Z",
+		"lastAccessed": "2024-09-26T14:06:43.339Z"
 	},
 	{
 		"key": "ps_n",
@@ -59,17 +59,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2024-09-26T13:02:20.610Z",
-		"lastAccessed": "2024-09-26T13:02:20.611Z"
-	},
-	{
-		"key": "m_pixel_ratio",
-		"value": "2.75",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2024-09-26T13:02:20.611Z",
-		"lastAccessed": "2024-09-26T13:02:20.611Z"
+		"creation": "2024-09-26T14:06:43.339Z",
+		"lastAccessed": "2024-09-26T14:06:43.339Z"
 	},
 	{
 		"key": "c_user",
@@ -77,26 +68,26 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2024-09-26T13:02:20.611Z",
-		"lastAccessed": "2024-09-26T13:02:20.611Z"
+		"creation": "2024-09-26T14:06:43.339Z",
+		"lastAccessed": "2024-09-26T14:06:43.339Z"
 	},
 	{
 		"key": "fr",
-		"value": "0UIasNRk8M46qRy2c.AWVfPVZx0Z_AOKLiABHAk4442FM.Bm9Bgd..AAA.0.0.Bm9VtG.AWVhaI4Gr8o",
+		"value": "0UIasNRk8M46qRy2c.AWUUOZDT9DmxWpRfDTn8vBa33EQ.Bm9Bgd..AAA.0.0.Bm9WLo.AWWCy_5wtZs",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2024-09-26T13:02:20.611Z",
-		"lastAccessed": "2024-09-26T13:02:20.611Z"
+		"creation": "2024-09-26T14:06:43.339Z",
+		"lastAccessed": "2024-09-26T14:06:43.339Z"
 	},
 	{
 		"key": "xs",
-		"value": "10%3AyuMQlchT5JPUbg%3A2%3A1727355718%3A-1%3A-1",
+		"value": "49%3AZEOscBjl5DEssg%3A2%3A1727357672%3A-1%3A-1",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2024-09-26T13:02:20.611Z",
-		"lastAccessed": "2024-09-26T13:02:20.611Z"
+		"creation": "2024-09-26T14:06:43.339Z",
+		"lastAccessed": "2024-09-26T14:06:43.339Z"
 	},
 	{
 		"key": "m_page_voice",
@@ -104,8 +95,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2024-09-26T13:02:20.611Z",
-		"lastAccessed": "2024-09-26T13:02:20.611Z"
+		"creation": "2024-09-26T14:06:43.339Z",
+		"lastAccessed": "2024-09-26T14:06:43.339Z"
 	},
 	{
 		"key": "wd",
@@ -113,25 +104,25 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2024-09-26T13:02:20.611Z",
-		"lastAccessed": "2024-09-26T13:02:20.611Z"
-	},
-	{
-		"key": "wl_cbv",
-		"value": "v2%3Bclient_version%3A2630%3Btimestamp%3A1727355732",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2024-09-26T13:02:20.611Z",
-		"lastAccessed": "2024-09-26T13:02:20.611Z"
+		"creation": "2024-09-26T14:06:43.339Z",
+		"lastAccessed": "2024-09-26T14:06:43.339Z"
 	},
 	{
 		"key": "fbl_st",
-		"value": "100639861%3BT%3A28789262",
+		"value": "100430370%3BT%3A28789324",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2024-09-26T13:02:20.611Z",
-		"lastAccessed": "2024-09-26T13:02:20.611Z"
+		"creation": "2024-09-26T14:06:43.339Z",
+		"lastAccessed": "2024-09-26T14:06:43.339Z"
+	},
+	{
+		"key": "wl_cbv",
+		"value": "v2%3Bclient_version%3A2630%3Btimestamp%3A1727359472",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2024-09-26T14:06:43.339Z",
+		"lastAccessed": "2024-09-26T14:06:43.339Z"
 	}
 ]
